--- a/_posts/2024-08-11-prefix-lm.md
+++ b/_posts/2024-08-11-prefix-lm.md
@@ -52,19 +52,19 @@ toc:
 
 Most current language models are trained using a Causal Language Modeling ("Causal LM") objective. This means that they predict 1 token at a time, left-to-right. 
 
-There are other variants that have been used or proposed, ranging from the original Masked Language Modeling<d-cite key="devlin-etal-2019-bert"></d-cite> or the more general T5-style Span Corruption<d-cite key="raffel2023exploringlimitstransferlearning"></d-cite>, hybrids of causal language modeling and span corruption (Fill-In-The-Middle<d-cite key="bavarian2022efficienttraininglanguagemodels"></d-cite>, GLM<d-cite key="du-etal-2022-glm"></d-cite>), mixtures of these objectives (UL2<d-cite key="tay2023ul2unifyinglanguagelearning"></d-cite>, UL2R<d-cite key="tay2022transcendingscalinglaws01"></d-cite>), and more.
+There are other variants that have been used or proposed, ranging from the original Masked Language Modeling (MLM<d-cite key="devlin-etal-2019-bert"></d-cite>) or the more general T5-style Span Corruption<d-cite key="raffel2023exploringlimitstransferlearning"></d-cite>, hybrids of causal language modeling and span corruption (Fill-In-The-Middle<d-cite key="bavarian2022efficienttraininglanguagemodels"></d-cite>, GLM<d-cite key="du-etal-2022-glm"></d-cite>), mixtures of these objectives (UL2<d-cite key="tay2023ul2unifyinglanguagelearning"></d-cite>, UL2R<d-cite key="tay2022transcendingscalinglaws01"></d-cite>), and more.
 
 
-The one we'll discuss in the post is **Prefix Language Modeling ("PrefixLM")**. The others have been discussed well elsewhere--my favorite treatment of these is an in-depth study by Wang et al. (2022)<d-cite key="pmlr-v162-wang22u"></d-cite><d-footnote>I can't recommend this paper highly enough, please read it!</d-footnote>, and others have also written well about this<d-cite key="tay2024objectives"></d-cite>. 
+The one we'll focus on in this post is **Prefix Language Modeling ("PrefixLM")**. See the diagram below for an image demonstrating the difference between PrefixLM and Causal LM: in PrefixLM, some initial subset of tokens may attend bidirectionally to each other (the "prefix"), followed by all other tokens being produced autogressively as in Causal LM. For more details on the other objectives, my favorite treatment of these is an in-depth study by Wang et al. (2022)<d-cite key="pmlr-v162-wang22u"></d-cite><d-footnote>I can't recommend this paper highly enough, please read it!</d-footnote> that attempts to disentangle the role of these objectives and the architectures often associated with them, based on zero-shot performance. Others have also written well about language modeling objectives<d-cite key="tay2024objectives"></d-cite>. 
 
 {% include figure.liquid loading="eager" path="assets/img/prefix-lm/noncausal-decoder-diagram.png"  caption="Diagram showing the differences in attention pattern between Causal Language Modeling (\"Causal Decoder\", Left) and Prefix Language Modeling (\"Noncausal Decoder\", Right). In Prefix Language Modeling, a set amount of tokens at the beginning of the input (here, the string \"I am\") are allowed to attend bidirectionally to each other, called the \"prefix\"."%}
 
 
 I have personally [not been a fan of PrefixLM](https://twitter.com/haileysch__/status/1691483230761857024?s=46) [for a while](https://twitter.com/haileysch__/status/1805295308047282466?s=46), mostly because we experimented with it a bit for BLOOMZ instruction tuning (See Appendix J)<d-cite key="muennighoff2023crosslingualgeneralizationmultitaskfinetuning"></d-cite> and wanted it to work, but it did not clearly make a difference in downstream performance, and certainly not enough to make it worth the added overhead and potential headache. However, I don't think this means something like PrefixLM will never be worth it in the future!
 
-A very nice recent paper by Arora et al. (2024), JRT-RNN<d-cite key="arora2024justreadtwiceclosing"></d-cite>, actually presents a compelling case for PrefixLM being worth reevaluating for non-Transformer architectures. The authors justify their choice by showing that since optimized Linear Attention / recurrent model implementations are faster than Flash Attention, they can get away with using the (typically more expensive) PrefixLM and still retain a significant speed advantage over a standard Transformer. 
+A very nice recent paper by Arora et al. (2024), JRT-RNN<d-cite key="arora2024justreadtwiceclosing"></d-cite>, actually presents a compelling case for PrefixLM being worth reevaluating for non-Transformer architectures. The authors justify their choice by showing that since optimized Linear Attention implementations are much faster than Flash Attention, they can get away with using the (typically more expensive) PrefixLM and still retain a significant speed advantage over a standard Transformer. 
 
-But there's actually a reason that PrefixLM with Linear Attention can be *even faster than full Causal LM* even though for softmax attention it'd be more computation! The synergy goes even deeper. I suspect the JRT-RNN authors are already aware of this fact, but I wanted to write it out so others can understand this intuition.
+But there's actually a reason that PrefixLM with Linear Attention can counterintuitively be *even faster than full Causal LM*, even though for softmax attention it'd be more computation! The synergy goes even deeper. I suspect the JRT-RNN authors are already aware of this fact, but I wanted to write it out so others can understand this intuition.
 
 First, let's briefly recap some of the disadvantages of PrefixLM for typical decoder-only GPT-style autoregressive LMs. If you are already familiar with PrefixLM and other LM objectives as well as their tradeoffs, feel free to skip to [later sections](http://haileyschoelkopf.github.io/blog/2024/prefix-lm/#prefixlm-3-linear-attention).
 
@@ -82,7 +82,7 @@ Also, when we're training our model, typically we don't get to compute any loss 
 
 ### Extra Test-Time Hyperparameter Tuning
 
-PrefixLM also introduces a hyperparameter that must be fiddled with ($l \in [1, L]$ determining that $x_{<l}$ is treated as the bidirectional-attention "prefix") to either get the best output quality or to not push the model out-of-distribution from the $l$ value used during training. This is not a problem Causal LM faces!
+PrefixLM also introduces a hyperparameter that must be fiddled with ($l \in [1, L]$ determining that $x_{\lt l}$ is treated as the bidirectional-attention "prefix"), either to get the best output quality, or to not push the model out-of-distribution from the typically fixed $l$ value used during training. This is not a problem Causal LM faces!
 
 
 ### Headaches with KV Caching
@@ -98,27 +98,27 @@ However, the empirical results in do not suggest this is the case<d-cite key="pm
 
 {% include figure.liquid loading="eager" path="assets/img/prefix-lm/prefix-lm-evals.png"  caption="Zero-shot average results obtained by Wang et al. (2022). Among Causal Decoder (decoder-only model trained with Causal LM), Non-causal Decoder (decoder-only model trained with PrefixLM), and Encoder-Decoder (encoder-decoder model trained with PrefixLM), the Causal Decoder is the best zero-shot model. For our purposes, the main takeaway is that PrefixLM is no more performant than Causal LM, and can in fact underperform it."%}
 
-A key caveat: These evals in Wang et al. (2022) are only **loglikelihood-based classification**, and are not especially high scores across the board at the scale tested in the paper. Papers like UL2R<d-cite key="tay2022transcendingscalinglaws01"></d-cite> have shown improvements from training or fine-tuning on PrefixLM or other non-causal objectives, although others anecdotally have had trouble reproducing this in their own codebases. It may be the case that either at larger scales, or on generative tasks / more subjective qualities, PrefixLM or other non-causal objectives lead to noticeable improvements--we don't currently know for sure.
+A key caveat: These evals in Wang et al. (2022) are only **loglikelihood-based classification**, and are not especially high scores across the board at the scale tested in the paper. Papers like UL2R<d-cite key="tay2022transcendingscalinglaws01"></d-cite> have shown improvements from training or fine-tuning on PrefixLM or other non-causal objectives, although others anecdotally have had trouble reproducing this in their own codebases. It may be the case that either at larger scales, or on generative tasks / more subjective qualities, PrefixLM or other non-causal objectives lead to noticeable improvements--we as a community don't currently know for sure.
 
 ## PrefixLM <3 Linear Attention
 
 ### Recap: What is Linear Attention?
 Standard Softmax attention is given by the following<d-footnote>We elide the scaling of $QK^T$ by $\frac{1}{\sqrt{d}}$ for simplicity.</d-footnote>:
 
-$$\text{Attention}(Q,K,V) = \text{Softmax}\left(QK^T\right)V$$
+$$O = \text{Softmax}\left(QK^T\right)V$$
 
 where $Q, K, V \in \mathbb{R}^{L \times d}$.
 
-Linear attention makes this more efficient by replacing the Softmax function with a feature map $\phi: \mathbb{R}^d \to \mathbb{R}^{d'}$ applied to Q and K separately:
+Linear attention makes this more efficient by replacing the Softmax function with a feature map $$\phi: \mathbb{R}^d \to \mathbb{R}^{d'}$$ applied to Q and K separately:
 
 $$O = \frac{(\phi(Q)\phi(K)^T) V}{\phi(Q)\sum^L_{i=1}\phi(K_i)^T}$$
 
 where $$Q, K \in \mathbb{R}^{L \times d'}, V \in \mathbb{R}^{L \times d}$$.
 
-This allows the $$Q$$, $$K^T$$, and $$V$$ matmuls to be re-associated, letting us avoid the $$O(L^2)$$ complexity of softmax attention by never producing $$(\phi(Q)\phi(K)^T) \in \mathbb{R}^{L \times L}$$. 
+This allows us to re-associate $$(\phi(Q)\phi(K)^T) V$$ as $$\phi(Q)(\phi(K)^T V)$$, letting us avoid the $$O(L^2)$$ complexity of softmax attention by never producing the intermediate $$(\phi(Q)\phi(K)^T) \in \mathbb{R}^{L \times L}$$. 
 
 
-In practice it has been found that one can get away with avoiding the denominator terms:
+In practice it has been found that one can get away with avoiding the denominator terms<d-cite key="sun2023retentivenetworksuccessortransformer"></d-cite>:
 
 $$O = \phi(Q)(\phi(K)^T V)$$
 
@@ -126,21 +126,20 @@ so we'll simplify Linear Attention to this going forward.
 
 ### Causality and Chunked Algorithm
 
-However, when we perform causal language modeling, we introduce a mask $M$ [TODO: describe M] that prevents tokens from being affected by *future* tokens in the sequence:
+When we perform causal language modeling, we introduce a mask $M$ that prevents tokens from being affected by *future* tokens in the sequence:
 
-
-
+$$O = \text{Softmax}\left(QK^T \odot M \right)V$$
 
 However, when we introduce this causal mask $M$ into linear attention: 
 
 $$O = (\phi(Q)\phi(K)^T \odot M) V$$
 
-We can no longer reorder the matmuls (QK^T)V as Q(K^T V) freely! This forces us to not use the efficient form ($O(Ldd')$), and instead use a *chunked* form interpolating between purely-recurrent and purely-parallel forms:
+We can no longer reorder the matmuls $$(QK^T)V$$ as $$Q(K^T V)$$ freely! This forces us to not use the efficient form ($$O(Ldd')$$), and instead use a *chunked* form interpolating between purely-recurrent and purely-parallel forms:
 
 
-For each chunk, we compute the starting state for that chunk, reusing the state computed for the chunk prior:
+For each chunk<d-footnote>$$[c]$$ indicates the $$c$$-th "chunk", a.k.a. the span of indices from $$[(c-1)C + 1, cC]$$. $$c$$ can range from $$1$$ to $$L//C$$.</d-footnote>, we compute the starting state for that chunk, reusing the state computed for the chunk prior:
 
-$$S_{[c+1]} = S_{[c]} + \sum_{i=((c-1)C + 1)}^{C}\phi(k_i)^Tv_i = S_{[c]} + \phi(K_{[c]})^T V_{[c]} $$ 
+$$S_{[c+1]} = S_{[c]} + \sum_{i=((c-1)C + 1)}^{cC}\phi(k_i)^Tv_i = S_{[c]} + \phi(K_{[c]})^T V_{[c]} $$ 
 
 and then to compute this chunk's output $O_{[c]}$:
 
@@ -153,7 +152,7 @@ This algorithm has $$O((L//C)(C^2d' + Cdd')) = O(LCd' + Ldd')$$ complexity, time
 
 ### Avoiding Chunking With PrefixLM
 
-But for PrefixLM, the non-causal input component has no attention mask!<d-footnote>This may note always be the case, sadly, if we want to pack multiple documents together without allowing them to attend across documents.... but it will for some cases, like, say, prefilling a super-long input for a PrefixLM Linear Attention model.</d-footnote>. So we can freely re-associate these for that entire prefix component of the computation.
+But for PrefixLM, the non-causal input component has no attention mask!<d-footnote>This may note always be the case, sadly, if we want to pack multiple documents together without allowing them to attend across documents.... but it will for some cases, like, say, prefilling a super-long input for a PrefixLM Linear Attention model.</d-footnote>. So we can freely compute in our more efficient ordering for that entire prefix component of the computation.
 
 This means that, on the entirely non-causal input (say, up to positions $\lt j$ ) we can use the naive $$O(Ldd')$$ complexity algorithm to compute the final state all in one go! No need to tamp down quadratic complexity by chunking.
 
@@ -183,7 +182,7 @@ $$S_t = G_{t} \odot S_{t-1} + k_{t}^Tv_t$$
 
 --based on some parameter calculated *as a function of the current input*, we decide how much to retain or "forget" the existing state when updating it with our new input. This is sometimes called different things like (data-dependent) "gating", "decay", or "selection" by various architectures.
 
-It's not especially clear that one would want a data-dependent update like this when attending to inputs bidirectionally though--maybe we can get away with data-independent updates when attending to our prefix, but include this gating when attending causally to the output. Hydra<d-cite key="hwang2024hydrabidirectionalstatespace"></d-cite> may offer some hints here.
+It's not especially clear that one would want a data-dependent update like this when attending to inputs bidirectionally though--maybe we can get away with data-*independent* updates when encoding our prefix, but include this gating when attending causally to the output. Hydra<d-cite key="hwang2024hydrabidirectionalstatespace"></d-cite> may offer some hints here.
 
 ## Conclusion
 
