--- a/assets/bibliography/2024-08-11-prefix-lm.bib
+++ b/assets/bibliography/2024-08-11-prefix-lm.bib
@@ -188,3 +188,13 @@
       author={Yi Tay},
       url={https://www.yitay.net/blog/model-architecture-blogpost-encoders-prefixlm-denoising},
 }
+
+@misc{sun2023retentivenetworksuccessortransformer,
+      title={Retentive Network: A Successor to Transformer for Large Language Models}, 
+      author={Yutao Sun and Li Dong and Shaohan Huang and Shuming Ma and Yuqing Xia and Jilong Xue and Jianyong Wang and Furu Wei},
+      year={2023},
+      eprint={2307.08621},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2307.08621}, 
+}
