footnotes don't like double 9087

--- a/_posts/2024-08-11-prefix-lm.md
+++ b/_posts/2024-08-11-prefix-lm.md
@@ -137,7 +137,7 @@ $$O = (\phi(Q)\phi(K)^T \odot M) V$$
 We can no longer reorder the matmuls $$(QK^T)V$$ as $$Q(K^T V)$$ freely! This forces us to not use the efficient form ($$O(Ldd')$$), and instead use a *chunked* form interpolating between purely-recurrent and purely-parallel forms:
 
 
-For each chunk<d-footnote>$$[c]$$ indicates the $$c$$-th "chunk", a.k.a. the span of indices from $$[(c-1)C + 1, cC]$$. $$c$$ can range from $$1$$ to $$L//C$$.</d-footnote>, we compute the starting state for that chunk, reusing the state computed for the chunk prior:
+For each chunk<d-footnote>$[c]$ indicates the $c$-th "chunk", a.k.a. the span of indices from $[(c-1)C + 1, cC]$. $c$ can range from $1$ to $L//C$.</d-footnote>, we compute the starting state for that chunk, reusing the state computed for the chunk prior:
 
 $$S_{[c+1]} = S_{[c]} + \sum_{i=((c-1)C + 1)}^{cC}\phi(k_i)^Tv_i = S_{[c]} + \phi(K_{[c]})^T V_{[c]} $$ 
 
